--- a/form.html
+++ b/form.html
@@ -204,7 +204,7 @@
                                 <option value="wind10" id="win10-1">Windows 10: Pro</option>
                                 <option value="wind7" id="win7-1">Windoes 7: Ultimate</option>
                                 <option value="ubuntu">Ubuntu</option>
-                                <option value="micro">Microsoft Office</option>
+                                <option value="office">Microsoft Office</option>
                                 <option value="photoshop">Adobe Photoshop</option>
                                 <option value="illustrator">Adobe Illustrator</option>
                                 <option value="adobePremirePro">Adobe Premire Pro</option>
@@ -215,7 +215,7 @@
                                 <option value="wind10" id="win10-2">Windows 10: Pro</option>
                                 <option value="wind7" id="win7-2">Windoes 7: Ultimate</option>
                                 <option value="ubuntu">Ubuntu</option>
-                                <option value="micro">Microsoft Office</option>
+                                <option value="office">Microsoft Office</option>
                                 <option value="photoshop">Adobe Photoshop</option>
                                 <option value="illustrator">Adobe Illustrator</option>
                                 <option value="adobePremirePro">Adobe Premire Pro</option>
@@ -226,7 +226,7 @@
                                 <option value="wind10" id="win10-3">Windows 10: Pro</option>
                                 <option value="wind7" id="win7-3">Windoes 7: Ultimate</option>
                                 <option value="ubuntu">Ubuntu</option>
-                                <option value="micro">Microsoft Office</option>
+                                <option value="office">Microsoft Office</option>
                                 <option value="photoshop">Adobe Photoshop</option>
                                 <option value="illustrator">Adobe Illustrator</option>
                                 <option value="adobePremirePro">Adobe Premire Pro</option>
@@ -259,11 +259,11 @@
                                 <option value="multiPlayer" disabled>Multi Player</option>
                                 <option value="--2" disabled></option>
                                 <option value="fortnite">Fortnite</option>
-                                <option value="fortnite">CSGO</option>
+                                <option value="csGo">CSGO</option>
                                 <option value="pubg">PUBG</option>
                                 <option value="rocketLeague">Rocket League</option>
                                 <option value="DOTA 2">DOTA 2</option>
-                                <option value="lol">League of Legends</option>
+                                <option value="leagueOfLegends">League of Legends</option>
                                 <option value="battlefield">Battlefield 2</option>
 								<option value="other">Other</option>
                             </select>
@@ -279,12 +279,12 @@
                                 <option value="--1" disabled></option>
                                 <option value="multiPlayer" disabled>Multi Player</option>
                                 <option value="--2" disabled></option>
-                                <option value="fortnite">CSGO</option>
+                                <option value="CsGo">CSGO</option>
                                 <option value="fortnite">Fortnite</option>
                                 <option value="pubg">PUBG</option>
                                 <option value="rocketLeague">Rocket League</option>
                                 <option value="DOTA 2">DOTA 2</option>
-                                <option value="lol">League of Legends</option>
+                                <option value="leagueOfLegends">League of Legends</option>
                                 <option value="battlefield">Battlefield 2</option>
                                 <option value="other">Other</option>
                             </select>
@@ -300,12 +300,12 @@
                                 <option value="--1" disabled></option>
                                 <option value="multiPlayer" disabled>Multi Player</option>
                                 <option value="--2" disabled></option>
-                                <option value="fortnite">CSGO</option>
+                                <option value="csGo">CSGO</option>
                                 <option value="fortnite">Fortnite</option>
                                 <option value="pubg">PUBG</option>
                                 <option value="rocketLeague">Rocket League</option>
-                                <option value="DOTA 2">DOTA 2</option>
-                                <option value="lol">League of Legends</option>
+                                <option value="DOTA2">DOTA 2</option>
+                                <option value="leagueOfLegends">League of Legends</option>
                                 <option value="battlefield">Battlefield 2</option>
                                 <option value="other">Other</option>
                             </select>
