Forms done, test remaining

--- a/facilities.html
+++ b/facilities.html
@@ -314,7 +314,7 @@
                 <hr>
             </div>
             <div class="row">
-                <form method="post" action="#" class="contact-form">
+                <form method="POST" action="resources/php/contact.php" class="contact-form">
                     <div class="row">
                         <div class="col span-1-of-3">
                             <label for="name">Name</label>
@@ -343,7 +343,7 @@
                                 <option value="ad">Advertisement</option>
                                 <option value="other">Other</option>
                             </select>
-							<input type="text" id="otherFind" class="otherFind" name="otherFind">
+							<input type="text" id="otherFind" class="otherFind" name="otherFind" placeholder="How did you hear about us?">
                         </div>
                     </div>
                     <div class="row">
