Fixed recommendation field in emails

--- a/facilities.html
+++ b/facilities.html
@@ -333,10 +333,10 @@
                     </div>
                     <div class="row">
                         <div class="col span-1-of-3">
-                            <label for="find-us">How did you find us?</label>
+                            <label for="findUs">How did you find us?</label>
                         </div>
                         <div class="col span-2-of-3">
-                            <select name="find-us" id="find-us">
+                            <select name="findUs" id="find-us">
                                 <option value="friends">Friends and Family</option>
                                 <option value="recommendation" selected>Recommendation</option>
                                 <option value="search-engine">Search engine</option>
