--- a/form.html
+++ b/form.html
@@ -15,6 +15,7 @@
         <!--Slider scripts-->
         <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+        <script src="vendors/js/jquery.ui.touch-punch.min.js"></script>
         <title>Valerie Tech</title>
     </head>
       <body>
