Rutika changes done

--- a/form.html
+++ b/form.html
@@ -376,31 +376,15 @@
                             <a href="#">Build a PC</a>
                         </li>
                         <li>
-                            <a href="#">Contact Us</a>
+                            <a href="#">Contact</a>
                         </li>
                     </ul>
                 </div>
                 <div class="col span-1-of-2">
-                    <ul class="social-icons">
-                        <li>
-                            <a href="#"><i class="icon ion-logo-facebook"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="icon ion-logo-twitter"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="icon ion-logo-googleplus"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="icon ion-logo-instagram"></i></a>
-                        </li>
-                    </ul>
+                    <p>
+                        &#169;ValerieTech, 2018
+                    </p>
                 </div>
-            </div>
-            <div class="row">
-                <p>
-                    team@valerietech.in<br>+91-(982)099-0356<br>Designed and created by the Valerie Tech team
-                </p>
             </div>
         </footer>
     </body>
