Responsiveness of changes done

--- a/form.html
+++ b/form.html
@@ -367,16 +367,16 @@
                 <div class="col span-1-of-2">
                     <ul class="footer-nav">
                         <li>
-                            <a href="#">Home</a>
+                            <a href="index.html">Home</a>
                         </li>
                         <li>
-                            <a href="#">Facilities</a>
+                            <a href="facilities.html">Facilities</a>
                         </li>
                         <li>
                             <a href="#">Build a PC</a>
                         </li>
                         <li>
-                            <a href="#">Contact</a>
+                            <a href="index.html">Contact</a>
                         </li>
                     </ul>
                 </div>
