--- a/index.html
+++ b/index.html
@@ -339,13 +339,13 @@
                             <a href="#">Home</a>
                         </li>
                         <li>
-                            <a href="#">Facilities</a>
+                            <a href="facilities.html">Facilities</a>
                         </li>
                         <li>
-                            <a href="#">Build a PC</a>
+                            <a href="form.html">Build a PC</a>
                         </li>
                         <li>
-                            <a href="#">Contact</a>
+                            <a href="#contact">Contact</a>
                         </li>
                     </ul>
                 </div>
