Fixed symmetry issues, footer nav

--- a/facilities.html
+++ b/facilities.html
@@ -393,7 +393,7 @@
                             <a href="form.html">Build a PC</a>
                         </li>
                         <li>
-                            <a href="index.html">Contact</a>
+                            <a href="#contact">Contact</a>
                         </li>
                     </ul>
                 </div>
