--- a/form.html
+++ b/form.html
@@ -376,7 +376,7 @@
                             <a href="#">Build a PC</a>
                         </li>
                         <li>
-                            <a href="index.html">Contact</a>
+                            <a href="index.html#contact">Contact</a>
                         </li>
                     </ul>
                 </div>
