--- a/index.html
+++ b/index.html
@@ -345,7 +345,8 @@
                             <a href="form.html">Build a PC</a>
                         </li>
                         <li>
-                            <a href="#contact">Contact</a>
+                            <a href="#cont
+                                     act">Contact</a>
                         </li>
                     </ul>
                 </div>
