removed .html, added phone number in form

--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
         <link href="https://unpkg.com/ionicons@4.2.1/dist/css/ionicons.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-37614837-2"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-37614837-2');
+        </script>
         <title>Valerie Tech</title>
     </head>
      <body>
@@ -69,7 +78,7 @@
                             <h1 class="hero-text fade">
                                 Spend less time configuring,<br>more time mining.
                             </h1>
-                            <a class="btn btn-full hero" href="form.html">Build me a PC!</a>
+                            <a class="btn btn-full hero" href="form">Build me a PC!</a>
                             <a class="btn btn-ghost hero js--scroll-to-facilities" href="#">Show me more</a>
                     </div>
                 
@@ -212,7 +221,7 @@
                 </div>
             </div>
             <div class="row learn-row">
-                <a class="btn btn-ghost btn-learn" href="facilities.html">Facilties and FAQ</a>                
+                <a class="btn btn-ghost btn-learn" href="facilities">Facilties and FAQ</a>                
             </div>
         </section>
         <section class="section section-testimonials"  id="testimonials">
@@ -339,10 +348,10 @@
                             <a href="#">Home</a>
                         </li>
                         <li>
-                            <a href="facilities.html">Facilities</a>
+                            <a href="facilities">Facilities</a>
                         </li>
                         <li>
-                            <a href="form.html">Build a PC</a>
+                            <a href="form">Build a PC</a>
                         </li>
                         <li>
                             <a href="#cont
