--- a/facilities.html
+++ b/facilities.html
@@ -11,6 +11,15 @@
         <link href="https://unpkg.com/ionicons@4.2.1/dist/css/ionicons.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-37614837-2"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-37614837-2');
+        </script>
         <title>Valerie Tech</title>
     </head>
       <body>
@@ -21,7 +30,7 @@
                     <img src="../resources/img/logo-white.png" alt="Logo" class="logo">
                     <ul class="main-nav js--main-nav">
                         <li>
-                            <a href="index.html">Home</a>
+                            <a href="index">Home</a>
                         </li>
                         <li>
                             <a href="#facilities">Facilities</a>
@@ -384,13 +393,13 @@
                 <div class="col span-1-of-2">
                     <ul class="footer-nav">
                         <li>
-                            <a href="index.html">Home</a>
+                            <a href="index">Home</a>
                         </li>
                         <li>
                             <a href="#">Facilities</a>
                         </li>
                         <li>
-                            <a href="form.html">Build a PC</a>
+                            <a href="form">Build a PC</a>
                         </li>
                         <li>
                             <a href="#contact">Contact</a>
