--- a/form.html
+++ b/form.html
@@ -16,6 +16,15 @@
         <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
         <script src="vendors/js/jquery.ui.touch-punch.min.js"></script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-37614837-2"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-37614837-2');
+        </script>
         <title>Valerie Tech</title>
     </head>
       <body>
@@ -26,13 +35,13 @@
                     <img src="../resources/img/logo-white.png" alt="Logo" class="logo">
                     <ul class="main-nav js--main-nav">
                         <li>
-                            <a href="index.html">Home</a>
+                            <a href="index">Home</a>
                         </li>
                         <li>
-                            <a href="facilities.html">Facilities and FAQs</a>
+                            <a href="facilities">Facilities and FAQs</a>
                         </li>
                         <li>
-                            <a href="index.html#contact">Contact</a>
+                            <a href="index#contact">Contact</a>
                         </li>                        
                     </ul>
                     <a class="mobile-nav-icon js--nav-icon"><i class="icon ion-ios-menu"></i></a>
@@ -130,7 +139,7 @@
                 <form class="main-form" action="/resources/php/form.php" method="POST">
                     <div id="panel1" class="p1">
                         <div class="row">
-                            <div class="col span-1-of-3">
+                            <div class="col span-1-of-3 labels">
                                 <label for="name">Name</label>
                             </div>
                             <div class="col span-2-of-3">
@@ -138,7 +147,7 @@
                             </div>  
                         </div>
                         <div class="row">
-                            <div class="col span-1-of-3">
+                            <div class="col span-1-of-3 labels">
                                 <label for="email">Email</label>
                             </div>
                             <div class="col span-2-of-3">
@@ -146,7 +155,15 @@
                             </div>  
                         </div>
                         <div class="row">
-                            <div class="col span-1-of-3">
+                            <div class="col span-1-of-3 labels">
+                                <label for="phone">Phone Number     (+91)</label>
+                            </div>
+                            <div class="col span-2-of-3">
+                                <input type="tel" name="phone" id="phone" placeholder="Your phone number" required>
+                            </div>  
+                        </div>
+                        <div class="row">
+                            <div class="col span-1-of-3 labels">
                                 <label>Budget range</label>
                             </div>
                             <div class="col span-2-of-3">
@@ -367,16 +384,16 @@
                 <div class="col span-1-of-2">
                     <ul class="footer-nav">
                         <li>
-                            <a href="index.html">Home</a>
+                            <a href="index">Home</a>
                         </li>
                         <li>
-                            <a href="facilities.html">Facilities</a>
+                            <a href="facilities">Facilities</a>
                         </li>
                         <li>
                             <a href="#">Build a PC</a>
                         </li>
                         <li>
-                            <a href="index.html#contact">Contact</a>
+                            <a href="index#contact">Contact</a>
                         </li>
                     </ul>
                 </div>
