added phone to contact, fixed alignment of contact form for queries

--- a/form.html
+++ b/form.html
@@ -2,6 +2,13 @@
 <html>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <head>
+        <!-- Google Tag Manager -->
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-597WRK6');</script>
+        <!-- End Google Tag Manager -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
         <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
@@ -28,6 +35,10 @@
         <title>Valerie Tech</title>
     </head>
       <body>
+        <!-- Google Tag Manager (noscript) -->
+        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-597WRK6"
+        height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+        <!-- End Google Tag Manager (noscript) -->
         <header>
             <nav>
                 <div class="row">
@@ -156,7 +167,7 @@
                         </div>
                         <div class="row">
                             <div class="col span-1-of-3 labels">
-                                <label for="phone">Phone Number     (+91)</label>
+                                <label for="phone">Phone Number</label>
                             </div>
                             <div class="col span-2-of-3">
                                 <input type="tel" name="phone" id="phone" placeholder="Your phone number" required>
