--- a/facilities.html
+++ b/facilities.html
@@ -2,6 +2,13 @@
 <html>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <head>
+        <!-- Google Tag Manager -->
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-597WRK6');</script>
+        <!-- End Google Tag Manager -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
         <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
@@ -23,6 +30,10 @@
         <title>Valerie Tech</title>
     </head>
       <body>
+        <!-- Google Tag Manager (noscript) -->
+        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-597WRK6"
+        height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+        <!-- End Google Tag Manager (noscript) -->
         <header>
             <nav>
                 <div class="row">
@@ -346,7 +357,7 @@
                 <div class="col span-2-of-3 span-form">
                     <form method="POST" action="resources/php/contact.php" class="contact-form">
                         <div class="row">
-                            <div class="col span-1-of-3">
+                            <div class="col span-1-of-3 labels">
                                 <label for="name">Name</label>
                             </div>
                             <div class="col span-2-of-3">
@@ -354,7 +365,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col span-1-of-3">
+                            <div class="col span-1-of-3 labels">
                                 <label for="email">Email</label>
                             </div>
                             <div class="col span-2-of-3">
@@ -362,7 +373,15 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col span-1-of-3">
+                            <div class="col span-1-of-3 labels">
+                                <label for="phone">Phone Number</label>
+                            </div>
+                            <div class="col span-2-of-3">
+                                <input type="email" name="phone" id="phone" placeholder="Your phone number" required>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col span-1-of-3 labels">
                                 <label for="findUs">How did you find us?</label>
                             </div>
                             <div class="col span-2-of-3">
