Changed banner and first hero copy

--- a/index.html
+++ b/index.html
@@ -73,9 +73,12 @@
 
             <div class="banners fade" style="background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),url('resources/img/banner-5.jpg')"></div>
             <div class="hero-text-box">
-                <h1 class="hero-text fade">
-                    Don't just build to own.<br>Build to Brag.
+                <h1 class="hero-text fade" style="text-transform: none;">
+                    TAILOR-MADE PCs.<br>WE BUILD, YOU BRAG.
                 </h1>
+                <!--Built and personalized by <img src="/resources/img/favicon.png" style="display:inline-block;height:70px;width:auto;position:relative;
+                        top: 20px;">
+                -->
                 <h1 class="hero-text fade">
                     Tight budget but want to pwn some noobs?<br>We’ve got you covered.
                 </h1>
