--- a/facilities.html
+++ b/facilities.html
@@ -27,7 +27,12 @@
           gtag('js', new Date());
 
           gtag('config', 'UA-37614837-2');
-        </script>
+    </script>
+    <script> 
+        $(function(){
+          $("#header").load("header.html"); 
+        });
+    </script> 
     <link rel="shortcut icon" type="image/png" href="/resources/img/favicon.png"/>
     <title>Valerie Tech</title>
 </head>
@@ -36,75 +41,8 @@
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-597WRK6" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    <header>
-        <nav>
-            <div class="row">
-                <img src="../resources/img/logo.png" alt="Logo" class="logo-black">
-                <img src="../resources/img/logo-white.png" alt="Logo" class="logo">
-                <ul class="main-nav js--main-nav">
-                    <li>
-                        <a href="index">Home</a>
-                    </li>
-                    <li>
-                        <a href="#facilities">Facilities</a>
-                    </li>
-                    <li>
-                        <a href="#faq">FAQs</a>
-                    </li>
-                    <li>
-                        <a href="#contact">Contact</a>
-                    </li>
-                </ul>
-                <a class="mobile-nav-icon js--nav-icon"><i class="icon ion-ios-menu"></i></a>
-            </div>
-        </nav>
-        <div class="banner-container">
-
-            <div class="banners fade" style="background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),url('resources/img/hero-image.jpg')"></div>
-
-            <div class="banners fade" style="background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),url('../resources/img/banner-1.jpg')"></div>
-
-            <div class="banners fade" style="background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),url('../resources/img/banner-2.jpg'); background-position: center -150px;"></div>
-
-            <div class="banners fade" style="background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),url('../resources/img/banner-3.jpg'); background-position: center -220px;"></div>
-
-            <div class="banners fade" style="background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),url('../resources/img/banner-4.jpg'); background-position: center -300px;"></div>
-
-            <div class="banners fade" style="background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),url('../resources/img/banner-5.jpg'); background-position: center -150px;"></div>
-
-            <div class="hero-text-box">
-                <h1 class="hero-text fade">
-                    Don't just build to own.<br>Build to Brag.
-                </h1>
-                <h1 class="hero-text fade">
-                    Tight budget but want to pwn some noobs?<br>We’ve got you covered.
-                </h1>
-                <h1 class="hero-text fade">
-                    Customize. Personalize. Maximize.<br>A build to suit all your needs.
-                </h1>
-                <h1 class="hero-text fade">
-                    Want a Mac but love your kidney?<br>We might have the solution for you!
-                </h1>
-                <h1 class="hero-text fade">
-                    An elite experience at your workplace.<br>Better performance at a lower price.
-                </h1>
-                <h1 class="hero-text fade">
-                    Spend less time configuring,<br>more time mining.
-                </h1>
-            </div>
-
-            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="next" onclick="plusSlides(1)">&#10095;</a>
-        </div>
-        <br>
-        <div class="dots">
-            <span class="dot" onclick="currentSlide(1)"></span>
-            <span class="dot" onclick="currentSlide(2)"></span>
-            <span class="dot" onclick="currentSlide(3)"></span>
-            <span class="dot" onclick="currentSlide(4)"></span>
-            <span class="dot" onclick="currentSlide(5)"></span>
-            <span class="dot" onclick="currentSlide(6)"></span>
-        </div>
+    <header id="header">
+        
     </header>
     <section class="section section-facilities js--section-facilities" id="facilities">
         <div class="row">
@@ -437,5 +375,5 @@
 </body>
 <script src="vendors/js/jquery.waypoints.min.js"></script>
 <script src="resources/js/function-facilities.js"></script>
-
+<script src="resources/css/queries-header.css"></script>
 </html>
