--- a/index.html
+++ b/index.html
@@ -392,5 +392,5 @@
 </body>
 <script src="vendors/js/jquery.waypoints.min.js"></script>
 <script src="resources/js/function.js"></script>
-
+<script src="resources/css/queries-header.css"></script>
 </html>
