Changed facilities, added offers

--- a/form.html
+++ b/form.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
     <link rel="stylesheet" type="text/css" href="vendors/css/animate.css">
     <link rel="stylesheet" type="text/css" href="resources/css/style-form.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/queries-header.css">
     <link rel="stylesheet" type="text/css" href="resources/css/queries-form.css">
     <link href="https://unpkg.com/ionicons@4.2.1/dist/css/ionicons.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet">
@@ -312,7 +313,7 @@
                         <a href="index">Home</a>
                     </li>
                     <li>
-                        <a href="facilities">Facilities</a>
+                        <a href="services">services</a>
                     </li>
                     <li>
                         <a href="#">Build a PC</a>
@@ -332,5 +333,4 @@
 </body>
 <script src="vendors/js/jquery.waypoints.min.js"></script>
 <script src="resources/js/function-form.js"></script>
-<script src="resources/css/queries-header.css"></script>
 </html>
