--- a/header.html
+++ b/header.html
@@ -9,7 +9,7 @@
                 <a href="index">Home</a>
             </li>
             <li>
-                <a href="facilities">Facilities and FAQs</a>
+                <a href="services">services and FAQs</a>
             </li>
             <li>
                 <a href="index#contact">Contact</a>
