--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" type="text/css" href="vendors/css/animate.css">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <link rel="stylesheet" type="text/css" href="resources/css/queries.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/queries-header.css">
     <link href="https://unpkg.com/ionicons@4.2.1/dist/css/ionicons.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -47,7 +48,7 @@
                         <a href="#why-us">Why us?</a>
                     </li>
                     <li>
-                        <a href="#facilities">Facilities</a>
+                        <a href="#services">services</a>
                     </li>
                     <li>
                         <a href="#testimonials">Testimonials</a>
@@ -95,7 +96,7 @@
                     Spend less time configuring,<br>more time mining.
                 </h1>
                 <a class="btn btn-full hero" href="form">Build me a PC!</a>
-                <a class="btn btn-ghost hero js--scroll-to-facilities" href="#">Show me more</a>
+                <a class="btn btn-ghost hero js--scroll-to-services" href="#">Show me more</a>
             </div>
 
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -184,7 +185,7 @@
             </li>
         </ul>
     </section>
-    <section class="section section-facilities js--section-facilities" id="facilities">
+    <section class="section section-services js--section-services" id="services">
         <div class="row">
             <h2>
                 What we offer
@@ -237,7 +238,7 @@
             </div>
         </div>
         <div class="row learn-row">
-            <a class="btn btn-ghost btn-learn" href="facilities">Facilties and FAQ</a>
+            <a class="btn btn-ghost btn-learn" href="services">Facilties and FAQ</a>
         </div>
     </section>
     <section class="section section-testimonials" id="testimonials">
@@ -345,7 +346,7 @@
                             <select name="findUs" id="find-us">
                                 <option value="friends">Friends and Family</option>
                                 <option value="recommendation" selected>Recommendation</option>
-                                <option value="search-engine">Search engine</option>
+                                <option value="google">Google</option>
                                 <option value="ad">Advertisement</option>
                                 <option value="other">Other</option>
                             </select>
@@ -372,7 +373,7 @@
                         <a href="#">Home</a>
                     </li>
                     <li>
-                        <a href="facilities">Facilities</a>
+                        <a href="services">services</a>
                     </li>
                     <li>
                         <a href="form">Build a PC</a>
@@ -392,5 +393,4 @@
 </body>
 <script src="vendors/js/jquery.waypoints.min.js"></script>
 <script src="resources/js/function.js"></script>
-<script src="resources/css/queries-header.css"></script>
 </html>
