--- a/index.html
+++ b/index.html
@@ -393,4 +393,5 @@
 </body>
 <script src="vendors/js/jquery.waypoints.min.js"></script>
 <script src="resources/js/function.js"></script>
+<script src="resources/js/function-header.js"></script>
 </html>
